--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --board-size: 630px;
+  --clover-color: hsl(87, 100%, 40%);
 }
 
 * {
